ndb - bug#47072   Incorrect extent free space accounting   Which could lead to suboptimal selection of extents for inserts   (and maybe maybe also crash during restart)